--- a/index.html
+++ b/index.html
@@ -1,1 +1,137 @@
+<!DOCTYPE HTML>
+<!-- 
+	Author: Liang Skylar Liang
+	Version date: 1.11.2021
+-->
+<html>
+	<head>
+		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"> 
+		<title>Works of Skylar</title>
+		<script src="assets/jquery.min.js"></script>
+		<script src="assets/smooth.js"></script>
+		<link rel="stylesheet" type="text/css" href="css/home.css">
+	</head>
+
+	<body>
+		<div id="page">
+			<!-- Deals with the header section on the very top -->
+			<header>
+				<a class="logo" title="works of SL" href="#"></a>
+				<div class="hero">
+					<h1>The works of <br /><strong>Liang Skylar Liang</strong></h1>
+					<p> Virginia Tech class of 2022 </p>
+				</div>
+				<div class="right">
+					<a class="btn" title="discover more" href="#one">DISCOVER</a>
+				</div>
+				<div class="line">
+					<hr/>
+				</div>
+			</header>
+
+			<section id="one" class="main">
+				<!-- a class name can be used mutiple times -->
+				<aside>
+					<!-- 
+						you can have any number of class assigned to an element, but you can only have one id.
+						so now they all follow the rules for content, but also individual setup.
+					-->
+					<div class="content trending">
+						<h3><a href="pages/working.html">What I'm working on</a></h3>
+						<p>This is the section that will introduce to you the project(s) that I'm
+							working on, including programming projects, and other projects that might
+							be related to my hobbies. 
+						</p>
+					</div>
+				</aside>
+
+				<aside>
+					<div class="content school">
+						<h3><a href="pages/schoolwork.html">About my school work</a></h3>
+						<p>This is the section that you will find all the works that I've done 
+							through my education at Virginia Tech (which I'm still attending). 
+							However, the details of the projects are only availble per request due to the
+							<a href="https://honorsystem.vt.edu/content/dam/honorsystem_vt_edu/forms/syllabusrequirementsandguidelines.pdf">honors system</a> 
+							at Virginia Tech. 
+						</p>
+					</div>
+				</aside>
+
+				<aside>
+					<div class="content hobby">
+						<h3><a href="pages/hobby.html">About my hobbies</a></h3>
+						<p>This section contains information regarding almost all the hobbies that I have, 
+							in mainly subjects that are not related to computer science or math.
+						</p>
+					</div>
+				</aside>
+			</section>
+
+			<section id="two" class="about me">
+				<article>
+					<h2>About Me</h2>
+					<p>Hi, I'm a third-year undergraduate student pursuing my Bachelor's degree in Computer Science and Mathematics
+						at Virginia Polytechnic Institute and State University (or Virginia Tech). <br/>
+						I am currently working as a research assistant for <a href="https://csgenome.org/">CSGenome</a>, 
+						a research group under the Department of Computer Science, where I help testing and developing the API for 
+						our group database. Besides that, I'm also a teaching assistant for the Department of Mathematics, where I 
+						mainly help with multivariable calculus related courses. </br>
+						I am passionate about many things related and not related to computer science, as you can see from the 
+						<a href="pages/hobby.html">hobbies</a> section. I dream of becoming a video game developer, and create outstanding 
+						games like one of my favorite of all time, the  <a href="https://www.unchartedthegame.com/en-us/">Uncharted</a> series. 
+					</p>
+					<a class="btn" title="Learn more about me" href="pages/aboutMe.html">Learn more about me!</a>
+				</article>
+			</section>
+
+			<section id="three" class="special">
+				<div class="major">
+					<h2>Special Features</h2>
+					<hr/>
+				</div>
+				<aside>
+					<div class="content">
+						<img alt="cover of a music video" src="images/home/music1.png" class="center">
+						<h3>Music Covering and Remix</h3>
+						<p>In this section, you will see all the songs that I have made a cover for or did a remix on. </br>
+							All the videos and audios within this section are for personal use and should not be used for profit.
+						</p>
+						<a title="Music covering and remix" href="pages/special1.html">Learn more</a>
+					</div>
+
+				</aside>
+
+				<aside>
+					<div class="content">
+						<img alt="Choosing the proper lighting" src="images/home/book.png" class="center">
+						<h3>Book Translation</h3>
+						<p>In this section, you will see a sample of the book that I'm translating from English to Mandarin. </br>
+						I do not plan to publish my translation after it has been finished since it's only for personal use, only a sample is shown. 
+						</p>
+						<a title="Book translation" href="pages/special2.html">Learn more</a>
+					</div>
+
+				</aside>
+
+				<blockquote>
+					<p class="quote">All men dream: but not equally. Those who dream by night in the dusty recesses of their minds wake up in the day to find it was vanity, but the dreamers of the day are dangerous men, for they may act their dreams with open eyes, to make it possible.</p>
+					<p class="credit"><strong>T. E. Lawrence</strong><br><em>Seven Pillars of Wisdom</em></p>
+				</blockquote>
+			</section>
+
+			<!-- Deals with the navigation tab on the top of the page -->
+			<nav></nav>
+
+			<!-- Footer of the website -->
+			<footer>
+				<!-- this is HTML format for copyright symbol -->
+				&copy; The Works of Liang Skylar Liang. All Rights Reserved.
+				<div class="content">
+					<a title="Privacy Policy" href="mailto: skylarl@vt.edu">Contact Me</a>
+				</div>
+			</footer>
+		</div>
+	</body>
+</html>
 
