--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
 					<p>Hi, I'm a third-year undergraduate student pursuing my Bachelor's degree in Computer Science and Mathematics
 						at Virginia Polytechnic Institute and State University (or Virginia Tech). <br/>
 						I am currently working as a research assistant for <a href="https://csgenome.org/">CSGenome</a>, 
-						a research group under the Department of Computer Science, where I help testing and developing the API for 
-						our group database. Besides that, I'm also a teaching assistant for the Department of Mathematics, where I 
-						mainly help with multivariable calculus related courses. </br>
+						a research group under the Department of Computer Science, where I help testing and developing the database API, 
+						and create SQLAlchemy models for incoming data. In addition, I'm working on a undergraduate research project related
+						to data freshness. Besides that, I'm also a teaching assistant for the Department of 
+						Mathematics, where I mainly help with multivariable calculus related courses. </br>
 						I am passionate about many things related and not related to computer science, as you can see from the 
 						<a href="pages/hobby.html">hobbies</a> section. I dream of becoming a video game developer, and create outstanding 
 						games like one of my favorite of all time, the  <a href="https://www.unchartedthegame.com/en-us/">Uncharted</a> series. 
